# multiclass-rle

./: CODE_OF_CONDUCT.md  README.md  benchmark.ipynb  pyproject.toml
multiclass_rle/: __init__.py  multiclass_rle.py  my_module.py
tests/: test_multiclass_rle.py  test_my_module.py
